@@ -1,5 +1,7 @@
 version 0.1.6
 - Package now 'depends' on methods to allow dispatch on objects inhereting from data.frame
+- bugfix: The assignment created(<validator>) <- <POSIXct> was broken. #65, thanks to Andrew R Gibson.
+
 
 version 0.1.5
 - The '.' is now used to reference the validated data set as whole.
